@@ -369,7 +369,7 @@ checks in all_greet_progs, specifically in the difference between mobs
 and player characters. Note that all_greet_progs will trigger even if a
 person is sneaking, though the mob must have detect invisibility to see
 invisible people, infravision to see people in the dark, sense sneaking
-to see sneakers, and will not see people if blinded. Also, be sure to 
+to see sneakers, and will not see people if blinded. Also, be sure to
 check out arrive_prog, which is a nice counterpart to greet_prog.</p>
       <h3><a name="act_prog">act_prog</a></h3>
       <h3><a name="mask_prog">mask_prog</a></h3>
@@ -427,9 +427,11 @@ act_progs, so do not try to use them; it won't work.</p>
       <pre>arrive_prog [integer percentage]<br /></pre>
       <p>This type of mobprog
 checks a percentage chance every time
-the scripted mob or item enters a new room, or when it enters the game. If the random
+the scripted mob or item enters a new room, or when it enters the game.
+If the random
 number generated between 1 and 100 is equal to or below the percentage
-of the greet_prog, the prog is triggered. This type of mobprog has all sorts
+of the greet_prog, the prog is triggered. This type of mobprog has all
+sorts
 of uses, ranging from giving in-zone quest information to people
 the mob stumbles upon, creating aggressive progs, etc.</p>
       <p>EXAMPLES:</p>
@@ -438,9 +440,11 @@ the mob stumbles upon, creating aggressive progs, etc.</p>
 triggered 25% of the time when the mob enters a room.</p>
       <pre>arrive_prog 100<br /></pre>
       <p>This prog will be
-triggered 100% of the time when the mob enters a room. This means every time.</p>
+triggered 100% of the time when the mob enters a room. This means every
+time.</p>
       <p>SPECIAL NOTES: You'll
-probably want to make sure you understand the difference between the arrive_prog and greet_prog/all_greet_prog.</p>
+probably want to make sure you understand the difference between the
+arrive_prog and greet_prog/all_greet_prog.</p>
       <h3><a name="bribe_prog">bribe_prog</a></h3>
       <p>Usage:</p>
       <pre>bribe_prog [money value]<br /></pre>
@@ -1017,7 +1021,8 @@ checks in greet_progs, specifically in the difference between mobs and
 player characters. Note that greet_progs will trigger except if a
 person is sneaking. Also, the mob must have detect invisibility to see
 invisible people, infravision to see people in the dark, and will not
-see people if blinded.  Lastly, make sure you check out arrive_prog, which
+see people if blinded. Lastly, make sure you check out arrive_prog,
+which
 is a useful counterpart to greet_prog</p>
       <h3><a name="hitprcnt_prog">hitprcnt_prog</a></h3>
       <p>Usage:</p>
@@ -2701,8 +2706,7 @@ surround the parameters to the command with parenthesis, and make sure
 all parameters are separated by commas instead of spaces. &nbsp;For
 example, in MOBPROG, you might write:<br />
       </p>
-      <pre>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; if IsPC ($n)<br />&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; MPEcho "The ground beneath $%InArea()% shakes!"<br />&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; endif
-      </pre>
+      <pre>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; if IsPC ($n)<br />&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; MPEcho "The ground beneath $%InArea()% shakes!"<br />&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; endif<br />      </pre>
       <p>However, in Javascript, the exact same effect is generated by
 writing:<br />
       </p>
@@ -2796,7 +2800,10 @@ mpecho as well.</p>
       <p>Performs the desired
 command at a designated location. The
 destination can be either a room id, a key word from the room
-description, or the name of a mob. The command can be just about
+description, or the name of a mob. If you need to be need to find
+mobile
+mobs or items, you can include the mob or item name, followed by @
+followed by a room id or area name. The command can be just about
 anything you want it to be. This command is very useful for doing
 slight of hand kind of tricks with mobs by performing actions away from
 the player, or doing things elsewhere in the zone for you. It has many
@@ -3021,7 +3028,10 @@ text string. This is useful for cutting down on spam from greet_prog
 mpechos, for example, as well as personalizing the text string for all
 parties involved in conjunction with the mpechoaround command. It also
 allows mobs to emulate the announce command. The target may be a local
-mob name, the word "world", the word "area", a room id, or an area name.</p>
+mob name, the word "world", the word "area", a room id, or an area
+name.&nbsp;If you need to be need to find mobile
+mobs or items, you can include the mob or item name, followed by @
+followed by a room id or area name. </p>
       <p>EXAMPLES:</p>
       <pre>mpechoat $n You hear voices speaking all around you.<br />mpechoat $n You cringe as a poisoned dart strikes you in the chest!<br />mpechoat $n A pile of rocks rains down upon you!<br />mpechoat $n A circle of light surrounds you, and you are transported.<br /></pre>
       <h3><a name="mpenable">mpenable</a></h3>
@@ -3121,7 +3131,10 @@ single quote rule for mobprog commands.</p>
       <p>Quite simply, this
 command will move the mob to the designated
 location. The destination can be a room id, keyword from a room
-description , or keyword of a mob. There is no message given to this
+description , or keyword of a mob. If you need to be need to find
+mobile
+mobs or items, you can include the mob or item name, followed by @
+followed by a room id or area name. There is no message given to this
 command, so if you want there to be one, you need to include an mpecho
 in your mobprog. This command is a good way to move your mob around
 your zone should you need to.</p>
@@ -3540,7 +3553,8 @@ pillage.</p>
       <p>This command is used to
 set one of the internal quest
 variables. These variables can be one of the standard Quest settings,
-such as: "CLASS", "NAME", "DURATION", "WAIT", "MINPLAYERS", "REMAINING",
+such as: "CLASS", "NAME", "DURATION", "WAIT", "MINPLAYERS",
+"REMAINING",
 "PLAYERMASK", "RUNLEVEL", "DATE", "MUDDAY", or "INTERVAL". More
 commonly though, they are user-defined variables which are only
 available for the duration of the quest, and reset each time the quest
@@ -3885,7 +3899,10 @@ endlessly, or something equally abusable.
 victim to a designated destination. The
 victim can be either a mob keyword or a character variable. The
 destination can be a room id, room name or description, a mob keyword,
-or a character variable. If there is no destination given, the mob
+or a character variable.&nbsp;If you need to be need to find mobile
+mobs or items, you can include the mob or item name, followed by @
+followed by a room id or area name. If there is no destination given,
+the mob
 transfers the victim to the same room that it is in. There is no
 message given to this command, so if you want there to be one, you need
 to include an mpecho in your mobprog. This command is a good way to
@@ -4260,7 +4277,9 @@ what we are after here.</p>
       <p>This checks to see if the
 target is in the room specified by
 the room code. The room code may be a room id, a mob name, or text from
-the rooms name or description. The '==' may also be '!='.</p>
+the rooms name or description. If you need to be need to find mobile
+mobs or items, you can include the mob or item name, followed by @
+followed by a room id or area name. The '==' may also be '!='.</p>
       <p>EXAMPLES:</p>
       <pre>if inroom($i == a bathroom)<br /> mpecho This means I am in a bathroom.<br />else<br /> mpecho I am not in a bathroom.<br />endif<br /><br />if inroom($i != MyArea#20001)<br /> mpecho I am not in room MyArea#20001.<br />else<br /> mpecho I am in room MyArea#20001.<br />endif<br /></pre>
       <h3><a name="ipaddress">ipaddress</a></h3>
@@ -4489,11 +4508,13 @@ the questname.</p>
       <pre>if isquestmobalive(1 myquest)<br /> mpecho The first set mob in the quest myquest is still alive.<br />else<br /> mpecho He's not dead yet.<br />endif<br /><br /></pre>
       <h3><a name="isrecall">isrecall</a></h3>
       <p>Usage:</p>
-isroom(target == roomcode)
+isrecall(target == roomcode)
       <p>This checks to see if the
 target is originally from the room
 specified by the room code. The room code may be a room id, a mob name
 (to compare start rooms), or text from the rooms name or description.
+If you need to be need to find mobile mobs or items, you can include
+the mob or item name, followed by @ followed by a room id or area name.
 The '==' may also be '!='.</p>
       <p>EXAMPLES:</p>
       <pre>if isrecall($i == a bathroom)<br /> mpecho This means I am from a bathroom.<br />else<br /> mpecho I am not from a bathroom.<br />endif<br /><br />if isrecall($i != MyArea#20001)<br /> mpecho I am not from room MyArea#20001.<br />else<br /> mpecho I am from room MyArea#20001.<br />endif<br /></pre>
@@ -4782,7 +4803,8 @@ value)</span>
 one of the official or user-defined
 quest variables. User-defined quest variables are defined using MPQSET.
 Official variables names include: "CLASS", "NAME", "DURATION", "WAIT",
-"MINPLAYERS", "PLAYERMASK", "RUNLEVEL", "DATE", "MUDDAY", "REMAINING", or
+"MINPLAYERS", "PLAYERMASK", "RUNLEVEL", "DATE", "MUDDAY", "REMAINING",
+or
 "INTERVAL". &nbsp;Official object variables include: "AREA",
 "MOBTYPE",
 "MOBGROUP", "ITEMTYPE", "LOCALE", "ROOM", "MOB", "ITEM", "ITEMGROUP",
